Weather icon animated

--- a/src/Weather.css
+++ b/src/Weather.css
@@ -30,6 +30,12 @@
   list-style: none;
 }
 
+.Weather canvas {
+  margin-right: 10px;
+  margin-top: 5px;
+  display: inline-block;
+}
+
 .Weather img {
   height: 64px;
   width: 64px;
